--- a/Task 1/Exercise1/nbproject/project.properties
+++ b/Task 1/Exercise1/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Exercise1
-main.class=Triangles.Triangles
+main.class=triangles.Triangles
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
