--- a/Task 1/Exercise2/nbproject/project.properties
+++ b/Task 1/Exercise2/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Exercise2
-main.class=Files.Files
+main.class=files.Files
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
