--- a/Task 1/Exercise3/nbproject/project.properties
+++ b/Task 1/Exercise3/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Exercise3
-main.class=Days.Days
+main.class=days.Days
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
