Remove unnessasary files and edit gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -428,5 +428,6 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/java,linux,windows,netbeans,visualstudio
 
-./nbproject/
-./manifest.mf
+*/nbproject/
+*/manifest.mf
+*/build.xml
