--- a/Task3/Task3.csproj
+++ b/Task3/Task3.csproj
@@ -8,7 +8,7 @@
     <PackageReference Include="nunit" Version="3.12.0"/>
     <PackageReference Include="NUnit3TestAdapter" Version="3.15.1"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
-    <PackageReference Include="Selenium.WebDriver" Version="3.141.0"/>
+    <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha05"/>
     <PackageReference Include="WebDriverManager" Version="2.9.1"/>
   </ItemGroup>
 </Project>
