--- a/Task4/SeleniumWrapper/SeleniumWrapper.csproj
+++ b/Task4/SeleniumWrapper/SeleniumWrapper.csproj
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageReference Include="Selenium.WebDriver" Version="4.0.0-alpha05"/>
     <PackageReference Include="WebDriverManager" Version="2.9.1"/>
+    <PackageReference Include="Selenium.Support" Version="4.0.0-alpha05"/>
   </ItemGroup>
 </Project>
